# AltairBASIC

./: .gitignore  ALTAIRBASIC30.LST  ALTAIRBASIC30.asm  ALTAIRBASIC30_ASM_LINES.LST  ALTAIRBASIC30_ASM_NOLINES.LST  Extended BASIC Ver 4-1.sym  README.md  asm.sh  convert.py
i8080tool/: CMakeLists.txt  Instructions.cpp  Instructions.h  SymbolTable.hpp  i8080_hal.c  i8080tool.cpp
